# wabt

./: .appveyor.yml  .clang-format  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ruff.toml  .style.yapf  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists2.txt  CMakeSettings.json  CONTRIBUTORS  Contributing.md  Makefile  README-wapm.md  README.md  README.rst  SECURITY.md  appveyor.yml  fac.wasm  hash.h  hash.txt  help2man.lua  known_gcc_test_failures.txt  nesting.wasm  s2wasm_known_gcc_test_failures.txt  sexpr-wasm-prototype.sln  sexpr-wasm-prototype.vcxproj  sexpr-wasm-prototype.vcxproj.filters  sexpr-wasm.c  test.wasm  travis-emcc.sh  ubsan.blacklist  wapm.toml  wasi-sdk.cmake  wasm.dict  wasm2c.md  (+2 more)
.github/: dependabot.yml
.github/workflows/: build.yml  build_release.yml  build_source_release.yml  cmake.yml  wabt-cifuzz.yml
cmake/: FindRE2C.cmake  README.md
demo/: custom.css  demo.js  examples.js  index.html  libwabt.js  libwabt.js.mem  libwasm.js  libwasm.js.mem  wast-mode.js
demo/wasm2wast/: examples.js  index.html
demo/wasm2wat/: demo.js  index.html
demo/wast2wasm/: examples.js  index.html
demo/wat2wasm/: demo.js  examples.js  index.html
docs/: decompiler.md  wast2json.md
docs/demo/: custom.css  index.html  libwabt.js  libwabt.wasm  share.js  third_party.bundle.js  third_party.bundle.js.map  wast-mode.js
docs/doc/: spectest-interp.1  spectest-interp.1.html  wasm-decompile.1.html  wasm-interp.1.html  wasm-objdump.1.html  wasm-opcodecnt.1.html  wasm-stats.1.html  wasm-strip.1.html  wasm-validate.1.html  wasm2c.1.html  wasm2wat.1.html  wast2json.1.html  wat-desugar.1.html  wat2wasm.1.html
embeddings/js/: test.js
embeddings/ocaml/: dune  input.ml  test.ml
embeddings/py/: input.py  intrinsics.py  test.py
fuzz-in/: wast.dict
fuzz-in/wasm/: stuff.wasm
fuzzers/: read_binary_interp_fuzzer.cc  read_binary_ir_fuzzer.cc  wasm2wat_fuzzer.cc  wasm_objdump_fuzzer.cc
include/wabt/: apply-names.h  base-types.h  binary-reader-ir.h  binary-reader-logging.h  binary-reader-nop.h  binary-reader-objdump.h  binary-reader-opcnt.h  binary-reader-options.h  binary-reader-stats.h  binary-reader.h  binary-writer-spec.h  binary-writer.h  binary.h  binding-hash.h  c-writer.h  cast.h  circular-array.h  common.h  compiler-support.h  component.h  decompiler-ast.h  decompiler-ls.h  decompiler-naming.h  decompiler.h  error-formatter.h  error.h  expr-visitor.h  feature.def  feature.h  filenames.h  generate-names.h  intrusive-list.h  ir-util.h  ir.h  leb128.h  literal.h  (+21 more)
js/: input.d.ts  input.js  intrinsics.js  test.js
man/: spectest-interp.1  wasm-decompile.1  wasm-interp.1  wasm-objdump.1  wasm-opcodecnt.1  wasm-stats.1  wasm-strip.1  wasm-validate.1  wasm2c.1  wasm2wat.1  wast2json.1  wat-desugar.1  wat2wasm.1
scripts/: Dockerfile  TC-s390x.cmake  appveyor-after-test.bat  appveyor-test-script.bat  build-d8.bat  build-d8.sh  build-sm.sh  build_wasi.sh  check_clean.py  clang-format-diff.sh  coverage.sh  d8-common.sh  download-d8.sh  download-sm.sh  download.sh  fuzz-wasm-objdump.sh  fuzz-wasm2wast.sh  fuzz-wasm2wat.sh  fuzz-wast2wasm.sh  fuzz-wat2wasm.sh  gen-emscripten-exported-json.py  gen-emscripten-exports.py  gen-wasm2c-templates.cmake  generate-html-docs.sh  help2man.lua  sha256sum.py  sm-common.sh  travis-before-deploy.sh  travis-before-install.sh  travis-build.sh  travis-common.sh  travis-emcc.sh  travis-test.sh  update-manpages.py  upload-d8.sh  upload-sm.sh  wabt-config.cmake.in  zig-c++  zig-cc
src/: alloca.h  allocator.c  allocator.h  apply-names.c  apply-names.cc  apply-names.h  array.h  ast-checker.c  ast-checker.h  ast-lexer.c  ast-lexer.cc  ast-lexer.h  ast-parser-lexer-shared.c  ast-parser-lexer-shared.cc  ast-parser-lexer-shared.h  ast-parser.h  ast-parser.y  ast-writer.c  ast-writer.cc  ast-writer.h  ast.c  ast.cc  ast.h  base-types.h  binary-error-handler.cc  binary-error-handler.h  binary-reader-ast.c  binary-reader-ast.cc  binary-reader-ast.h  binary-reader-interp.cc  binary-reader-interp.h  binary-reader-interpreter.c  binary-reader-interpreter.cc  binary-reader-interpreter.h  binary-reader-ir.cc  binary-reader-ir.h  binary-reader-linker.c  binary-reader-linker.cc  binary-reader-linker.h  binary-reader-logging.cc  (+268 more)
src2/: apply-names.cc  binary.cc  config.h.in  decompiler.cc  emscripten-exports.txt  emscripten-helpers.cc  generate-names.cc  ir-util.cc  lexer-keywords.txt  lexer-source.cc  literal.cc  option-parser.cc  stream.cc  test-hexfloat.cc  test-option-parser.cc  wast-lexer.cc
src3/: binary-reader-stats.cc  binary-writer-spec.cc  binary-writer.cc  binary.cc  color.cc  common.cc  feature.cc  filenames.cc  ir-util.cc  lexer-source-line-finder.cc  sha256.cc  shared-validator.cc  test-intrusive-list.cc  test-literal.cc  test-wast-parser.cc  type-checker.cc  utf8.cc
test/: README.md  bad-assert-before-module.txt  bad-empty-file.txt  bad-module-no-close.txt  bad-multi-module.txt  bad-single-semicolon.txt  bad-spec.txt  bad-string-eof.txt  bad-string-escape.txt  bad-string-hex-escape.txt  bad-toplevel.txt  basic.txt  find_exe.py  findtests.py  gen-spec-empty-prefix.js  gen-spec-js.py  gen-spec-prefix.js  gen-spec-wast.py  gen-wasm.py  hexfloat.c  hexfloat.cc  pipes.txt  roundtrip.py  run-c-api-examples.py  run-d8.py  run-gen-spec-js.py  run-gen-wasm-interp.py  run-gen-wasm.py  run-interp.py  run-js.py  run-objdump.py  run-opcodecnt.py  run-roundtrip.py  run-spec-wasm2c.py  run-tests.py  run-wasm-link.py  run-wasmdump.py  spec-wasm2c-prefix.c  spec.js  spectest-interp-assert-failure.txt  (+9 more)
test-exceptions/: try-text.wast  try.wast
wasm2c/: .gitignore  README.md  main-emscripten.c  uvwasi-rt.c  uvwasi-rt.h  wasm-rt-exceptions-impl.c  wasm-rt-exceptions.h  wasm-rt-impl-tableops.inc  wasm-rt-impl.c  wasm-rt-impl.h  wasm-rt-mem-impl-helper.inc  wasm-rt-mem-impl.c  wasm-rt-os-unix.c  wasm-rt-os-win.c  wasm-rt-os.h  wasm-rt-runner.c  wasm-rt-shadow.cpp  wasm-rt-threads-dummy-impl.c  wasm-rt-threads-impl.cpp  wasm-rt-threads.h  wasm-rt-unified.c  wasm-rt-uvwasi-adapter.c  wasm-rt-uvwasi-adapter.h  wasm-rt-wasi.c  wasm-rt.h
(+3071 files in other folders)
